--- a/index.html
+++ b/index.html
@@ -208,28 +208,6 @@
                               <div class="author-position">Missionary</div>
                             </div>
                           </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide context-dark">
-                    <div class="swiper-slide-caption text-center text-lg-left">
-                      <div class="row justify-content-center">
-                        <div class="col-xl-10 p-xl-0">
-                          <div class="row justify-content-center align-items-center flex-column flex-md-row row-20">
-                            <div class="col-lg-3 p-xl-0"><img src="images/home-4-280x349.jpg" alt="" width="280" height="349"/>
-                            </div>
-                            <div class="col-lg-9 inset-left-110">
-                              <div class="h3">“For me, Rise is an oasis where I can be refreshed with living water. Every Sunday<span class="text-italic accent-block">I come with expectation</span>of what message I will receive from our Lord.”</div>
-                              <div class="author">Brandon Peterson</div>
-                              <div class="author-position">Parishioner</div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
                 <!--Swiper Pagination-->
                 <div class="swiper-pagination"></div>
                 <!--Swiper Navigation-->
@@ -270,8 +248,8 @@ London, SE3 8LN</a>
       </section>
       <section class="section section-vide section-lg video-wrap vide" data-vide-bg="video/video-1">
         <div class="container text-center context-dark">
-          <div class="h1">Attend the next church event</div>
-          <p class="text-sm">See you at the sunday sermon</p>
+          <div class="h1">God Inhabits The Praise of His People</div>
+          <p class="text-sm"></p>
         </div>
       </section>
       <footer class="section footer-classic">
