--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                       <div class="row justify-content-center">
                         <div class="col-xl-10 p-xl-0">
                           <div class="row justify-content-center row-20 align-items-center flex-column flex-md-row">
-                            <div class="col-lg-3 p-xl-0"><img src="images/home-3-280x349.jpg" alt="" width="280" height="349"/>
+                            <div class="col-lg-3 p-xl-0"><img src="images/rev.png" alt="" width="280" height="349"/>
                             </div>
                             <div class="col-lg-9 inset-left-110">
                               <div class="h3">“Preaching the Gospel of our Lord Jesus to both young and old and it has been growing and successful for seven years.
